<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ConstructionReporter</string>
    <string name="action_settings">Settings</string>
    <string name="OptionA" tools:ignore="UnusedResources">Report Date</string>
    <string name="OptionB" tools:ignore="UnusedResources">Report Type</string>
    <string name="OptionC" tools:ignore="UnusedResources">Weather</string>
    <string name="MainMenu_A">Create New Report</string>
    <string name="MainMenu_B">View/Edit Existing Reports</string>
    <string name="MainMenu_D">View Created PDF Reports</string>
    <string name="OptionD">Manpower</string>
    <string name="OptionA0" tools:ignore="UnusedResources">Project Information</string>
    <string name="ProjectName">Project Name</string>
    <string name="ProjectAddress">Project Address</string>
    <string name="ProjectId">Project Number / ID</string>
    <string name="Discipline">Discipline</string>
    <string name="Photos">Report Photos</string>
    <string name="Activities">Activities</string>
    <string name="Equipment">Equipment</string>
    <string name="taskdescription">Activity Description</string>
    <string name="longtextprueba">Texto de prueba largo para demostrar como quedaria la descripcion de una actividad en la ventana y si estaria bien alienada</string>
    <string name="ReportDate">Report Date</string>
    <string name="ReportType">Report Type</string>
    <string name="Weather">Weather</string>
    <string name="ReportInfo">Report Information</string>
    <string name="photoinformation">Photo Information</string>
    <string name="ReportPhotos">Report Photos</string>
    <string name="action_help">Help</string>
    <string name="ReportTime">Report Time</string>
    <string name="Start">Start Time</string>
    <string name="EndTime">End Time</string>
    <string name="ProjectLogo">Project Logo</string>
    <string name="sampletaskdescription">Construction of the foundations ongoing. Pile #5 was poured today with no exceptions noted. Drillin of piles #7 and #8 continues with no issues.</string>
    <string name="EditItem">Edit Item</string>
    <string name="Name">Name</string>
    <string name="Activity">Activity</string>
    <string name="company">Company</string>
    <string name="CompanyLogo">Company Logo</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="clear">clear</string>
    <string name="accept">Accept</string>
    <string name="signature">Signature</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="imagedescription">Image Description</string>
    <string name="newreport">New Report</string>
    <string name="settings">Settings</string>
    <string name="ReportOriginatorName">Report Originator Name</string>
    <string name="ReportOriginator">Report Originator</string>
    <string name="ReportOriginatorPosition">Report Originator Position</string>
    <string name="ReportOriginatorCompany">Report Originator Company</string>
    <string name="ReportOriginatorSignature">Report Originator\nSignature</string>
    <string name="IncludeManpowerInReport">Include Manpower\nIn Report</string>
    <string name="IncludeEquipmentInReport">Include Equipment\nIn Report</string>
    <string name="IncludePhotosInReport">Include Photos\nIn Report</string>
    <string name="QualityOfPhotos">Quality of Photos</string>
    <string name="Open">Open</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Back">Back</string>
    <string name="AddActivityToReport">Add Activity To Report</string>
    <string name="PhotoDescription">Photo Description</string>
    <string name="NewActivity">New Activity</string>
    <string name="NewContractor">New Contractor</string>
    <string name="NewReport">New Report</string>
    <string name="EditReport">Edit Report</string>
    <string-array name="defaultspinner">
        <item>Default_Activity</item>
    </string-array>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string-array name="photoquality">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>
