<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/signature_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/signature_button"
        android:text="@string/signature"
        android:textColor="@android:color/white"
        style="@style/textstyle_A"
        android:padding="5dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@id/signature_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:background="@android:color/white">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="@drawable/signature_button" />
        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/clear"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="@drawable/signature_button" />
        <Button
            android:id="@+id/getsign"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/save"
            tools:ignore="ButtonStyle"
            android:textColor="@android:color/white"
            android:background="@drawable/signature_button" />

    </LinearLayout>
</RelativeLayout>
