<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dp10"
    android:background="@color/settings_gray"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ScrollView
        android:fadeScrollbars="false"
        android:scrollbarStyle="outsideOverlay"
        android:background="@color/white"
        android:paddingBottom="80dp"
        android:clipToPadding="false"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <TextView
                android:id="@+id/df_projectinfo_1"
                android:layout_margin="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReportDate"
                style="@style/textstyle_A"/>
            <TextView
                android:id="@+id/df_projectinfo_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightgray"
                style="@style/textstyle_B"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                android:padding="@dimen/dp5" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/settings_gray"
                android:layout_marginTop="@dimen/dp10"/>
            <TextView
                android:id="@+id/df_projectinfo_13"
                android:layout_margin="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReportTime"
                style="@style/textstyle_A"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/starttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Start"
                    style="@style/textstyle_C"
                    android:layout_marginStart="20dp"
                    android:padding="@dimen/dp5"/>
                <TextView
                    android:id="@+id/df_projectinfo_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="8"
                    android:maxEms="8"
                    android:layout_alignParentEnd="true"
                    android:background="@color/lightgray"
                    style="@style/textstyle_B"
                    android:padding="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp10"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5">
                <TextView
                    android:id="@+id/starttext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EndTime"
                    style="@style/textstyle_C"
                    android:padding="@dimen/dp5"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:id="@+id/df_projectinfo_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="8"
                    android:maxEms="8"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:background="@color/lightgray"
                    style="@style/textstyle_B"
                    android:padding="@dimen/dp5"
                    android:layout_marginEnd="@dimen/dp10"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/settings_gray"
                android:layout_marginTop="@dimen/dp10"/>

            <TextView
                android:id="@+id/df_projectinfo_4"
                android:layout_margin="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReportType"
                style="@style/textstyle_A"/>
            <TextView
                android:id="@+id/df_projectinfo_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightgray"
                style="@style/textstyle_B"
                android:padding="@dimen/dp5"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/settings_gray"
                android:layout_marginTop="@dimen/dp10"/>
            <TextView
            android:id="@+id/df_projectinfo_7"
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Discipline"
            style="@style/textstyle_A"/>
            <TextView
                android:id="@+id/df_projectinfo_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightgray"
                style="@style/textstyle_B"
                android:padding="@dimen/dp5"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/settings_gray"
                android:layout_marginTop="@dimen/dp10"/>
            <TextView
                android:id="@+id/df_projectinfo_10"
                android:layout_margin="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Weather"
                style="@style/textstyle_A"/>
            <TextView
                android:id="@+id/df_projectinfo_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightgray"
                style="@style/textstyle_B"
                android:padding="@dimen/dp5"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/settings_gray"
                android:layout_marginTop="@dimen/dp10"/>
        </LinearLayout>
</ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabaccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorSecondary"
        android:src="@drawable/ic_check_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"/>
</RelativeLayout>