<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="Overdraw">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditItem"
        android:minEms="5"
        android:layout_gravity="start"
        android:layout_margin="@dimen/dp10"
        style="@style/textstyle_A"
        android:layout_marginTop="@dimen/dp10"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/settings_gray" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        style="@style/textstyle_B"
        android:layout_margin="@dimen/dp10"/>
    <EditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        style="@style/textstyle_B"
        android:background="@color/lightgray"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:padding="@dimen/dp5"
        tools:text="Foreman"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Activity"
        style="@style/textstyle_B"
        android:layout_margin="@dimen/dp10"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinner1"
            style="@style/myspinnerstyle"
            android:layout_width="match_parent"
            android:layout_toStartOf="@+id/btn_addactivity"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="@dimen/dp10"
            android:entries="@array/defaultspinner"
            android:layout_centerVertical="true"
            />
        <ImageButton
            android:id="@+id/btn_addactivity"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_alignBottom="@id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            android:background="@drawable/rectangular_button_grey_solid"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:layout_margin="@dimen/dp10"
        style="@style/textstyle_B"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinner2"
            style="@style/myspinnerstyle"
            android:layout_width="match_parent"
            android:layout_toStartOf="@+id/btn_addcontractor"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="@dimen/dp10"
            android:entries="@array/defaultspinner"
            android:layout_centerVertical="true"
            />
        <ImageButton
            android:id="@+id/btn_addcontractor"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_alignBottom="@id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            android:background="@drawable/rectangular_button_grey_solid"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/fabaccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check_black_24dp"
            android:padding="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_alignTop="@+id/fabcancel"
            android:background="@drawable/rectangular_button_grey_solid_3"
            android:layout_alignParentEnd="true" />
        <ImageButton
            android:id="@+id/fabcancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_black_24dp"
            android:padding="@dimen/dp10"
            android:background="@drawable/rectangular_button_grey_solid_3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dp15"/>
    </RelativeLayout>
</LinearLayout>