<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/settings_gray"
    android:padding="@dimen/dp10"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:fadeScrollbars="false"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="80dp"
        android:clipToPadding="false">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/recyclerviewtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:text="@string/photoinformation"
                style="@style/textstyle_A"/>
            <View
                android:id="@+id/elemento1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/settings_gray"
                android:layout_below="@id/recyclerviewtitle"/>
            <com.ilaquidain.constructionreporter.object.SquareImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:layout_below="@+id/elemento1"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                style="@style/textstyle_B"
                android:id="@+id/title1"
                android:layout_below="@+id/image1"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title1"
                android:background="@color/lightgray"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                style="@style/textstyle_B"
                android:layout_marginTop="@dimen/dp5"
                android:padding="@dimen/dp5"
                android:maxLines="1"
                tools:text="Thursday 28, June 2017 22:10:17"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Activity"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                style="@style/textstyle_B"
                android:layout_below="@id/textview1"
                android:id="@+id/title2"/>
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title2"
                android:layout_marginTop="@dimen/dp5"
                android:background="@color/lightgray"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                android:entries="@array/hours"
                style="@style/myspinnerstyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imagedescription"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                style="@style/textstyle_B"
                android:layout_below="@id/spinner1"
                android:id="@+id/title3"/>
            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title3"
                android:background="@color/lightgray"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                style="@style/textstyle_B"
                android:layout_marginTop="@dimen/dp5"
                android:layout_alignStart="@id/elemento1"
                android:layout_alignEnd="@id/elemento1"
                android:padding="@dimen/dp5"
                android:maxLines="1" />
        </RelativeLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabaccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/dp10"
        app:backgroundTint="@color/colorSecondary"
        android:src="@drawable/ic_check_black_24dp"/>
</RelativeLayout>